# yolo_triton_tensorrt

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  folders.py  main.py  pyproject.toml  requirements.txt
.github/: labels.yaml
.github/workflows/: linter.yml
app/: .dockerignore  Dockerfile  main.py
backend/: .dockerignore  Dockerfile.fastapi
backend/app/: .dockerignore  Dockerfile  main.py
backend/triton/: Dockerfile
backend/utils/: yolo_classes.py
client/: client.py
clients/: client.py
frontend/: Dockerfile  Dockerfile.streamlit  app.py
infrastructure/monitoring/: docker-compose.yml  prometheus.yml
models/postprocess/1/: model.py
models/yolov8_ensemble/: config.bptxt
notebooks/: yolo.ipynb
tests/: test_client.py  test_main.py
utils/: load_model.py
yolo_model/: config.bptxt  load_model.py
yolo_models/: load_model.py
